@@ -1,21 +1,14 @@
 plugins {
     id 'com.github.johnrengelman.shadow' version "5.2.0"
-    id 'org.javamodularity.moduleplugin' version '1.6.0'
-    id "org.beryx.jlink" version "2.17.0"
     id 'application'
 }
 
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'application'
-apply plugin: 'org.javamodularity.moduleplugin'
-apply plugin: "org.beryx.jlink"
 apply from: '../gradle/instrument.gradle'
 
-import org.javamodularity.moduleplugin.tasks.ModularJavaExec
-
-
-def localMainClassName = "$moduleName/com.hiddenswitch.spellsource.net.applications.LocalClustered"
-def defaultMainClass = "$moduleName/com.hiddenswitch.spellsource.net.applications.Clustered"
+def localMainClassName = "com.hiddenswitch.spellsource.net.applications.LocalClustered"
+def defaultMainClass = "com.hiddenswitch.spellsource.net.applications.Clustered"
 
 def debugSystemProperties = ["spellsource.port"                        : System.getenv().getOrDefault("PORT", "8080"),
                              "spellsource.root.logger.level"           : "DEBUG",
@@ -24,15 +17,6 @@ def debugSystemProperties = ["spellsource.port"                        : System.
 
 
 mainClassName = localMainClassName
-
-jlink {
-    options.addAll(['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages'])
-    launcher {
-        name = 'spellsource_server'
-        jvmArgs = ['--add-opens', 'java.base/java.util.concurrent.atomic=kryo', '--add-opens', 'java.base/java.lang=co.paralleluniverse.quasar.core']
-    }
-}
-
 
 shadowJar {
     mergeServiceFiles()
@@ -160,13 +144,10 @@ dependencies {
 }
 
 run {
-    moduleOptions {
-        addOpens = ['java.base/java.util.concurrent.atomic': 'kryo', 'java.base/java.lang': 'co.paralleluniverse.quasar.core']
-    }
     setSystemProperties(debugSystemProperties)
 }
 
-task(runDebug, dependsOn: 'classes', type: ModularJavaExec) {
+task(runDebug, dependsOn: 'classes', type: JavaExec) {
     setSystemProperties(debugSystemProperties)
     setJvmArgs(["-Xdebug", "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005"] as List<String>)
     main = localMainClassName
@@ -177,10 +158,6 @@ test {
     useJUnitPlatform()
     maxParallelForks = 1
     enableAssertions = false
-
-    moduleOptions {
-        addOpens = ['java.base/java.util.concurrent.atomic': 'kryo', 'java.base/java.lang': 'co.paralleluniverse.quasar.core']
-    }
 
     testLogging {
         events 'PASSED', 'FAILED', 'SKIPPED'
